--- a/.github/workflows/multiarch.yaml
+++ b/.github/workflows/multiarch.yaml
@@ -8,6 +8,7 @@ on:
 jobs:
   build-multiarch:
     name: Multiarch build
+    fail-fast: false
     runs-on: ubuntu-latest
     strategy:
       matrix:
