--- a/.github/workflows/multiarch.yaml
+++ b/.github/workflows/multiarch.yaml
@@ -49,3 +49,34 @@ jobs:
           name: pkp_${{ matrix.arch }}_static
           path: pkp_${{ matrix.arch }}_static
 
+  release:
+    name: Create release
+    runs-on: ubuntu-latest
+    needs: build-multiarch
+    steps:
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          draft: true
+          prerelease: true
+
+      - name: Download binary artifacts
+        uses: actions/download-artifact@v2
+        with:
+          path: binaries
+
+      - name: Upload Release Asset
+        id: upload-release-asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./dist/pkp_static
+          asset_name: pkp_amd64_static
+          asset_content_type: application/octet-stream
