--- a/.github/workflows/multiarch.yaml
+++ b/.github/workflows/multiarch.yaml
@@ -54,39 +54,49 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-multiarch
     steps:
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          draft: true
-          prerelease: true
+      # - name: Create Release
+      #   id: create_release
+      #   uses: actions/create-release@v1
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   with:
+      #     tag_name: ${{ github.ref }}
+      #     release_name: Release ${{ github.ref }}
+      #     draft: true
+      #     prerelease: true
 
       - name: Download binary artifacts
         uses: actions/download-artifact@v2
         with:
           path: binaries
 
-      - name: Upload Release Asset
-        id: upload-release-asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./dist/pkp_static
-          asset_name: pkp_amd64_static
-          asset_content_type: application/octet-stream
+      # - name: Upload Release Asset
+      #   id: upload-release-asset
+      #   uses: actions/upload-release-asset@v1
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   with:
+      #     upload_url: ${{ steps.create_release.outputs.upload_url }}
+      #     asset_path: ./dist/pkp_static
+      #     asset_name: pkp_amd64_static
+      #     asset_content_type: application/octet-stream
 
-      - name: Delete release if anything goes wrong.
-        if: ${{ failure() }}
-        uses: author/action-rollback@stable
+      - name: Create Release
+        uses: softprops/action-gh-release@v1
+        # if: startsWith(github.ref, 'refs/tags/')
         with:
-          id: ${{ steps.create_release.id }}
-          # tag: 'v1.0.1'
-          always_delete_tag: true
+          files: |
+            pkp_amd64_static
+            pkp_386_static
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      # - name: Delete release if anything goes wrong.
+      #   if: ${{ failure() }}
+      #   uses: author/action-rollback@stable
+      #   with:
+      #     id: ${{ steps.create_release.id }}
+      #     # tag: 'v1.0.1'
+      #     always_delete_tag: true
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
