--- a/.github/workflows/multiarch.yaml
+++ b/.github/workflows/multiarch.yaml
@@ -85,10 +85,11 @@ jobs:
         uses: softprops/action-gh-release@v1
         # if: startsWith(github.ref, 'refs/tags/')
         with:
+          name: Test GitHub Actions Release
           tag_name: ${{ github.ref }}
           files: |
-            pkp_amd64_static
-            pkp_386_static
+            ./binaries/pkp_amd64_static
+            ./binaries/pkp_386_static
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
