--- a/.github/workflows/multiarch.yaml
+++ b/.github/workflows/multiarch.yaml
@@ -71,7 +71,7 @@ jobs:
           prerelease: true
 
       - name: Upload Release Asset (amd64)
-        id: upload-release-asset
+        id: upload-release-asset-amd64
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -82,7 +82,7 @@ jobs:
           asset_content_type: application/octet-stream
 
       - name: Upload Release Asset (i386)
-        id: upload-release-asset
+        id: upload-release-asset-386
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
