--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -99,7 +99,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ needs.release.outputs.upload_url }}
-          asset_path: ./pkp_${{ matrix.arch }}/pkp_${{ matrix.arch }}
+          asset_path: ./pkp_${{ matrix.arch }}
           asset_name: pkp_${{ matrix.arch }}
           asset_content_type: application/octet-stream
 
@@ -109,7 +109,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ needs.release.outputs.upload_url }}
-          asset_path: ./pkp_${{ matrix.arch }}_static/pkp_${{ matrix.arch }}_static
+          asset_path: ./pkp_${{ matrix.arch }}_static
           asset_name: pkp_${{ matrix.arch }}_static
           asset_content_type: application/octet-stream
 
