--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -42,12 +42,13 @@ jobs:
         run: |
           export DOCKER_CLI_EXPERIMENTAL=enabled
           ./build.sh "${{ matrix.arch }}"
+          mv ./dist/pkp ./dist/pkp_${{ matrix.arch }}
 
       - name: Upload binary artifact (dynamic)
         uses: actions/upload-artifact@v2
         with:
           name: pkp_${{ matrix.arch }}
-          path: ./dist/pkp
+          path: ./dist/pkp_${{ matrix.arch }}
 
       - name: Upload binary artifact (static)
         uses: actions/upload-artifact@v2
