--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "pkp"
-version = "0.4.0"
-description = ""
+version = "0.4.1"
+description = "Straightforward CLI for KeePass - powered by pykeepass"
 authors = ["Philipp Schmitt <philipp@schmitt.co>"]
 license = "GPL-3.0-only"
 
