--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,11 @@ license = "GPL-3.0-only"
 [tool.poetry.dependencies]
 python = "^3.8"
 pykeepass = "^3.2.1"
+colorama = "^0.4.4"
 
 [tool.poetry.dev-dependencies]
+pyinstaller = "^4.0"
+staticx = "^0.12.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
